--- a/apps/base/simple/release.yaml
+++ b/apps/base/simple/release.yaml
@@ -1,17 +1,17 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: simple-deploy
-  namespace: simple-deploy
+  name: simple
+  namespace: simple
 spec:
-  releaseName: simple-deploy
+  releaseName: simple
   chart:
     spec:
       chart: simple-deploy
       version: ">=0.1.0"
       sourceRef:
         kind: HelmRepository
-        name: simple-deploy
+        name: simple
         namespace: flux-system
   interval: 2m
   install:
