--- a/apps/base/simple/release.yaml
+++ b/apps/base/simple/release.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: simple-deploy
-      version: ">=0.1.0"
+      version: "0.2.0"
       sourceRef:
         kind: HelmRepository
         name: simple
@@ -17,3 +17,5 @@ spec:
   install:
     remediation:
       retries: 3
+  values:
+    replicaCount: 1
