--- a/clusters/staging/flux-system/gotk-components.yaml
+++ b/clusters/staging/flux-system/gotk-components.yaml
@@ -3277,7 +3277,7 @@ spec:
       - args:
         - --events-addr=http://notification-controller/
         - --watch-all-namespaces=true
-        - --log-level=info
+        - --log-level=trace
         - --log-encoding=json
         - --enable-leader-election
         env:
@@ -3430,7 +3430,7 @@ spec:
       - args:
         - --events-addr=http://notification-controller/
         - --watch-all-namespaces=true
-        - --log-level=info
+        - --log-level=trace
         - --log-encoding=json
         - --enable-leader-election
         - --storage-path=/data
